# Advanced-Tic-Tac-Toe

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
doc/: Performance.md  SDS.md  SRS.md  Testing.md
src/: main.cpp
src/ai/include/: AI.h
src/ai/src/: AI.cpp
src/core/include/: Board.h  Game.h  Player.h
src/core/src/: Board.cpp  Game.cpp  Player.cpp
src/db/include/: DatabaseManager.h  GameRecord.h  User.h
src/db/src/: DatabaseManager.cpp  User.cpp
src/gui/forms/: gamewindow.ui  historydialog.ui  logindialog.ui  replaywindow.ui
src/gui/include/: GameWindow.h  HistoryDialog.h  LoginDialog.h  MainWindow.h  ReplayWindow.h
src/gui/src/: GameWindow.cpp  HistoryDialog.cpp  LoginDialog.cpp  MainWindow.cpp  ReplayWindow.cpp
tests/: CMakeLists.txt
tests/ai/: test_ai_logic.cpp
tests/core/: test_game_logic.cpp
