# CMakeLists.txt (Root)
# Version: 5.0 (Manual Qt Handling)

cmake_minimum_required(VERSION 3.16)
project(AdvancedTicTacToe VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# --- Qt Setup ---
# We find the Qt package, but disable all the "AUTO" magic.
find_package(Qt6 COMPONENTS Widgets Sql REQUIRED)

# --- Google Test Integration (Manual Subdirectory) ---
set(gtest_build_tests OFF CACHE BOOL "" FORCE)
if(MSVC)
    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
endif()
add_subdirectory(googletest EXCLUDE_FROM_ALL)


# --- Source File Definitions ---
set(CORE_SOURCES
    src/core/src/Board.cpp
    src/core/src/Game.cpp
    src/core/src/Player.cpp
)
set(AI_SOURCES
    src/ai/src/AI.cpp
)
set(DB_SOURCES
    src/db/src/DatabaseManager.cpp
    src/db/src/User.cpp
)
# We list only the .cpp files here now
set(GUI_SOURCES
    src/gui/src/MainWindow.cpp
    src/gui/src/GameWindow.cpp
    src/gui/src/LoginDialog.cpp
    src/gui/src/HistoryDialog.cpp
    src/gui/src/ReplayWindow.cpp  # <-- ADDED for Replay
)
set(UI_FILES
    src/gui/forms/gamewindow.ui
    src/gui/forms/logindialog.ui
    src/gui/forms/historydialog.ui
    src/gui/forms/replaywindow.ui # <-- ADDED for Replay
)
# We explicitly list the headers that need MOC (Meta-Object Compiler)
set(MOC_HEADERS
    src/gui/include/MainWindow.h
    src/gui/include/GameWindow.h
    src/gui/include/LoginDialog.h
    src/gui/include/HistoryDialog.h
    src/gui/include/ReplayWindow.h # <-- ADDED for Replay
)

# --- Manual Qt Commands ---
# This is the replacement for the broken CMAKE_AUTOGEN

# 1. Manually process the .ui files into headers
qt_wrap_ui(UI_GENERATED_HEADERS ${UI_FILES})

# 2. Manually process the Q_OBJECT headers into .cpp files
qt_wrap_cpp(MOC_GENERATED_SOURCES ${MOC_HEADERS})


# --- Main Executable Target ---
add_executable(AdvancedTicTacToe
    # Main entry point
    src/main.cpp
    
    # All our source files
    ${CORE_SOURCES}
    ${AI_SOURCES}
    ${DB_SOURCES}
    ${GUI_SOURCES}
    
    # The C++ files generated by the MOC step above
    ${MOC_GENERATED_SOURCES}
    
    # The UI header files are handled by include directories
    ${UI_GENERATED_HEADERS}
)

# --- Include Directories ---
target_include_directories(AdvancedTicTacToe PUBLIC
    # The directory where generated UI headers are placed
    ${CMAKE_CURRENT_BINARY_DIR}
    
    # Our project's include directories
    ${CMAKE_CURRENT_SOURCE_DIR}/src/core/include
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ai/include
    ${CMAKE_CURRENT_SOURCE_DIR}/src/db/include
    ${CMAKE_CURRENT_SOURCE_DIR}/src/gui/include
)

# --- Link Libraries ---
target_link_libraries(AdvancedTicTacToe
    PRIVATE
    Qt6::Widgets
    Qt6::Sql
)

# --- Testing Setup ---
enable_testing()
add_subdirectory(tests)